--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap');
+@import '@fortawesome/fontawesome-free/css/all.min.css';
+
 
 @tailwind base;
 @tailwind components;
